testdata/e2e/examples/deployment/assertions.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
spec: {}
